--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
   </head>
 
   <body>
-    
+    <div class="container">
+      <div class="content-wrapper">
+        <h2>Branding Guidelines</h2>
+        <p>
+          Welcome to the DailySmarty branding guidelines! We’re happy that you
+          see the worth of our product and understand the value in promoting it
+          correctly.
+        </p>
+        <p>
+          The folowing guides have been provided to assist you in maintaining
+          the integrity and intedended useage of our logo and branding in your
+          marketing materials. Keeping with these guidelines will reinforce both
+          your and our professionalism and legitimacy in the eyes of the
+          audience.
+        </p>
+        <p>
+          Thank you again for your interest and relationship with DailySmarty.
+          Please see the guidelines outlined below (logo assets can be
+          downloaded below):
+        </p>
+      </div>
+    </div>
   </body>
 </html>
