Branding Page Layout and Flexbox Integration

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       li {
         font-family: "PT Serif", serif;
       }
+
+      .container {
+        display: flex;
+        justify-content: center;
+      }
+
+      .content-wrapper {
+        width: 660px;
+      }
     </style>
   </head>
 
