--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           correctly.
         </p>
         <p>
-          The folowing guides have been provided to assist you in maintaining
+          The following guides have been provided to assist you in maintaining
           the integrity and intedended useage of our logo and branding in your
           marketing materials. Keeping with these guidelines will reinforce both
           your and our professionalism and legitimacy in the eyes of the
