Building Your First CSS Grid Container

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       .content-wrapper {
         width: 660px;
       }
+
+      .style-details {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .style-details-logo img {
+        width: 100%;
+      }
     </style>
   </head>
 
@@ -54,6 +63,24 @@
           Please see the guidelines outlined below (logo assets can be
           downloaded below):
         </p>
+      </div>
+      <div class="style-details">
+        <div class="style-details-text">
+          <h3>Primary Logo</h3>
+          <div>White Space = 1/4 logo width</div>
+          <div>White logo on primary blue</div>
+
+          <h3>Primary Color</h3>
+          <div>#0079FF</div>
+          <div>RGB 0, 121, 255</div>
+
+          <h3>Name</h3>
+          <div>Capitalize “D” and “S”</div>
+          <div>No space between the words</div>
+        </div>
+        <div class="style-details-logo">
+          <img src="images/logo-with-margin.png" alt="logo with margins">
+        </div>
       </div>
     </div>
   </body>
