Adding Custom Heading and Bullet Point Styles in Grid Columns

--- a/index.html
+++ b/index.html
@@ -65,9 +65,43 @@
         gap: 30px;
       }
 
+      .dos-donts-heading {
+        font-weight: 900;
+        margin-bottom: 20px;
+        margin-left: 40px;
+      }
+
+      .blue-text {
+        color: #0079ff;
+      }
+
+      .red-text {
+        color: #dc0004;
+      }
+
+      .dont-image-box {
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
       .dont-image-box img {
         width: 50%;
+
       }
+
+      .dont-image-box div {
+        font-size: 14px;
+        color: #999999;
+      }
+
+      .dos-donts-list li {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        font-size: 16px;
+      }
+
+     
+
     </style>
   </head>
 
@@ -113,7 +147,7 @@
         </div>
         <div class="dos-donts-wrapper">
           <div class="dos-donts-list">
-            <div class="dos-donts-heading">
+            <div class="dos-donts-heading blue-text">
               Logo Do's
             </div>
             <ul>
@@ -124,7 +158,7 @@
             </ul>
           </div>
           <div class="dos-donts-list">
-            <div class="dos-donts-heading">
+            <div class="dos-donts-heading red-text">
               Logo Dont's
             </div>
             <ul>
@@ -136,12 +170,16 @@
           <div class="donts-images">
             <div class="dont-image-box">
               <img src="images/dont_stretch.png" alt="stretched logo">
+              <div>Stretch</div>
             </div>
+            
             <div class="dont-image-box">
               <img src="images/dont_crop.png" alt="cropped logo">
+              <div>Crop</div>
             </div>
             <div class="dont-image-box">
               <img src="images/dont_color.png" alt="green logo">
+              <div>Color</div>
             </div>
           </div>
         </div>
