Guide to the CSS Grid Repeat Function to Render a Dynamic Number of Rows

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 
       .dont-image-box img {
         width: 50%;
-
       }
 
       .dont-image-box div {
@@ -100,8 +99,38 @@
         font-size: 16px;
       }
 
-     
+      .alternate-options-wrapper {
+        margin-top: 75px;
+        margin-bottom: 75px;
+      }
 
+      .alternate-options-wrapper h3 {
+        color: #999999;
+        font-size: 18px;
+        font-weight: 900;
+      }
+
+      .alternate-options-wrapper li {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        font-size: 18px;
+      }
+
+      .alternate-options-images {
+        margin-top: 80px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); 
+        justify-items: center;
+        gap: 100px 40px;
+      }
+
+      .image-logos {
+        width: 60px;
+      }
+
+      .text-logos {
+        width: 90%;
+      }
     </style>
   </head>
 
@@ -164,23 +193,49 @@
             <ul>
               <li>Strech or scale the logo non-uniformely.</li>
               <li>Crop or partially cover the logo with other objects.</li>
-              <li>Alter the logo or wordmark color to anything other than our primary color.</li>
+              <li>
+                Alter the logo or wordmark color to anything other than our
+                primary color.
+              </li>
             </ul>
           </div>
           <div class="donts-images">
             <div class="dont-image-box">
-              <img src="images/dont_stretch.png" alt="stretched logo">
+              <img src="images/dont_stretch.png" alt="stretched logo" />
               <div>Stretch</div>
             </div>
-            
+
             <div class="dont-image-box">
-              <img src="images/dont_crop.png" alt="cropped logo">
+              <img src="images/dont_crop.png" alt="cropped logo" />
               <div>Crop</div>
             </div>
             <div class="dont-image-box">
-              <img src="images/dont_color.png" alt="green logo">
+              <img src="images/dont_color.png" alt="green logo" />
               <div>Color</div>
             </div>
+          </div>
+        </div>
+        <div class="alternate-options-wrapper">
+          <h3>Alternate Options</h3>
+          <ul>
+            <li>
+              The circular badge can be used separately from the wordmark.
+            </li>
+            <li>
+              The icon may be extracted from the logo and applied separately -
+              but it must remain white and have a background of our primary blue
+              color.
+            </li>
+            <li>
+              The wordmark may be used separately from the circular badge.
+            </li>
+            <li>Logo Do’s and Do Not’s above still apply.</li>
+          </ul>
+          <div class="alternate-options-images">
+            <img class="image-logos" src="images/ds_circle_logo.png" alt="image logo">
+            <img class="image-logos" src="images/ds_square_logo.png" alt="image logo">
+            <img class="text-logos" src="images/ds_icon_text_logo.png" alt="text logo">
+            <img class="text-logos" src="images/ds_text_logo.png" alt="text logo">
           </div>
         </div>
       </div>
