Implementing Final Page Styles and Review of CSS Grid's Repeat Function

--- a/index.html
+++ b/index.html
@@ -119,18 +119,34 @@
       .alternate-options-images {
         margin-top: 80px;
         display: grid;
-        grid-template-columns: repeat(2, 1fr); 
+        grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         gap: 100px 40px;
       }
 
       .image-logos {
-        width: 60px;
+        width: 60%;
       }
 
       .text-logos {
         width: 90%;
       }
+
+      .additional-branding-details {
+        margin-top: 75px;
+        margin-bottom: 75px;
+      }
+
+      .additional-branding-details p {
+        margin-bottom: 42px;
+      }
+
+      .additional-branding-details a {
+        color: #4fb8e8;
+        font-size: 18px;
+      }
+
+
     </style>
   </head>
 
@@ -232,10 +248,39 @@
             <li>Logo Do’s and Do Not’s above still apply.</li>
           </ul>
           <div class="alternate-options-images">
-            <img class="image-logos" src="images/ds_circle_logo.png" alt="image logo">
-            <img class="image-logos" src="images/ds_square_logo.png" alt="image logo">
-            <img class="text-logos" src="images/ds_icon_text_logo.png" alt="text logo">
-            <img class="text-logos" src="images/ds_text_logo.png" alt="text logo">
+            <img
+              class="image-logos"
+              src="images/ds_circle_logo.png"
+              alt="image logo"
+            />
+            <img
+              class="image-logos"
+              src="images/ds_square_logo.png"
+              alt="image logo"
+            />
+            <img
+              class="text-logos"
+              src="images/ds_icon_text_logo.png"
+              alt="text logo"
+            />
+            <img
+              class="text-logos"
+              src="images/ds_text_logo.png"
+              alt="text logo"
+            />
+          </div>
+          <div class="additional-branding-details">
+            <h3>Asset Download</h3>
+            <p>
+              <a href="#">Download .zip file.</a>
+            </p>
+            <h3>Usage</h3>
+            <p>
+              Please remember to adhere to the above guidlines when referencing
+              and using our logos. If you are unsure of the correct protocol for
+              a particular usecase, feel free to ask us at the following email:
+              support@dailysmarty.com.
+            </p>
           </div>
         </div>
       </div>
