Combining CSS Grid with Media Queries to Implement a Responsive Layout

--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
         color: #4fb8e8;
         font-size: 18px;
       }
+      @media (max-width: 48em) {
+        .style-details, .dos-donts-wrapper {
+          grid-template-columns: 1fr;
+          gap: 50px;
+        }
+
+        .style-details-text {
+          text-align: center;
+        }
+
+    
+      }
 
 
     </style>
