--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <title>DailySmarty Logos and Branding</title>
+    <title>DailySmarty Logos and Branding!</title>
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
